<resources>
    <string name="app_name">AppChatMovil</string>
    <string name="nombre_desarrollador">Aquino Garay Giancarlos</string>

    //Video 7
    <string name="Btn_ir_registros">Registrarme</string>
    <string name="Btn_ir_logeo">Ingresar</string>

    <string name="R_Et_nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    //Video 11
    <string name="L_Et_email">Correo Electrónico</string>
    <string name="L_Et_Password">Contraseña</string>
    <string name="Btn_login">Ingresar</string>

</resources>