<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <!--Nombre de Usuario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/R_Et_nombre_usuario"
                android:hint="@string/R_Et_nombre_usuario"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/R_Et_email"
                android:hint="@string/R_Et_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/R_Et_password"
                android:hint="@string/R_Et_password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Repeat Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/R_Et_r_password"
                android:hint="@string/R_Et_r_password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_registrar"
            android:text="@string/Btn_registrar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>



</RelativeLayout>